package com.nexappra.filerecovery.domain.model

enum class RecoveryResultFilter {
    All,
    Photos,
    Videos,
    Audio,
    Documents,
    WhatsApp,
    Downloads,
    Screenshots,
    Hidden,
    RecycleBin,
    LargeFiles,
    Other,
}
